--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0"
   }
 }
